ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/Insurance_Premium_details__c.object-meta.xml
<CustomObject>
    <label>Insurance Premium details</label>
    <nameField>
        <label>Insurance Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Premium details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>