ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <label>Active Flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>