ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Addl_Doc_Charges__c.field-meta.xml
<CustomField>
    <fullName>Addl_Doc_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Addl Doc Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>