ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Disable_Funding__c.field-meta.xml
<CustomField>
    <fullName>Disable_Funding__c</fullName>
    <label>Disable Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>