ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <externalId>true</externalId>
    <label>External_id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>