ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Ins_Product__c.field-meta.xml
<CustomField>
    <fullName>Ins_Product__c</fullName>
    <label>Insurance Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>