ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Insurance_Master__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Master</label>
    <referenceTo>InsuranceMaster__c</referenceTo>
    <relationshipLabel>Insurance Premium details</relationshipLabel>
    <relationshipName>Insurance_Premium_details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>