ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Insurance_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan_Code__c</fullName>
    <label>Insurance Plan Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>