ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <label>Loan Product</label>
    <length>2</length>
    <type>Text</type>
</CustomField>