ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/fields/Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured__c</fullName>
    <label>Sum Insured</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>