ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Addl_Doc_Charges__c</columns>
    <columns>Insurance_Master__c</columns>
    <columns>Insurance_Plan_Code__c</columns>
    <columns>Ins_Product__c</columns>
    <columns>Period__c</columns>
    <columns>Premium__c</columns>
    <columns>Active_Flag__c</columns>
    <columns>External_id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Loan_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>