ProdIND/ProdPrograms/force-app/main/default/objects/Insurance_Premium_details__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Ins_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>